syntax = "proto2";

package huton_proto;

message CacheBatch {
    required string cache_name = 1;
    required bytes buf = 2;
    repeated uint64 meta = 3;
}


